fix overflow

--- a/app.css
+++ b/app.css
@@ -15,6 +15,7 @@ html {
     color:  #c9c9c9;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 .avt
 {
